# GEO_2025_VOLE

./: CMakeLists.txt  README.md  run_exp_nagx_client.sh  run_exp_nagx_server.sh  test_exp_nagx_benchmark.sh
SCI/networks/: CMakeLists.txt  main_and.cpp  main_compare_eq.cpp  main_cot.cpp  main_crossterm.cpp  main_equality.cpp  main_gelu.cpp  main_hadamard.cpp  main_lut.cpp  main_matmul_cross_terms.cpp  main_sextend.cpp  main_truncate.cpp
SCI/src/: CMakeLists.txt
SCI/src/BuildingBlocks/: CMakeLists.txt  aux-protocols.cpp  aux-protocols.h  geometric_perspective_protocols.cpp  geometric_perspective_protocols.h  value-extension.cpp  value-extension.h
SCI/src/LinearOT/: linear-ot.cpp
SCI/src/OT/: co.h  split-iknp.h
SCI/src/OT/ferret/: silent_ot.h
SCI/src/utils/: mitccrh.h
SCI/tests/: CMakeLists.txt  test_ring_exp_nagx.cpp
networks/: main_and.cpp  main_clear_msb.cpp  main_compare_eq.cpp  main_cot.cpp  main_crossterm.cpp  main_elu.cpp  main_equality.cpp  main_exp_nagx.cpp  main_exp_nagx_iknp.cpp  main_hadamard.cpp  main_kkot.cpp  main_lut.cpp  main_matmul_cross_terms.cpp  main_multiplexer.cpp  main_sextend.cpp  main_sigmoid.cpp  main_tanh.cpp  main_truncate.cpp
